// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeparatingLine renders if optional params are not passed in 1`] = `
<hr
  class="sc-bczRLJ YiLbe"
  data-testid="Line"
/>
`;

exports[`SeparatingLine renders if optional params are passed in 1`] = `
<hr
  class="sc-bczRLJ evnIXe"
  data-testid="Line"
/>
`;
